# RS-Key

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  NOTICE  README.md  book.toml  flake.nix
.github/workflows/: ci.yml  deep-checks.yml  pages.yml  release.yml
crates/rsk-oath/: Cargo.toml
crates/rsk-rescue/: Cargo.toml
crates/rsk-rescue/src/: keydev.rs  lib.rs  phy.rs  rollback.rs
docs/: SUMMARY.md  architecture.md  build.md  hardware.md  index.md  interop.md  limitations.md  linux.md  motivation.md  production.md  quickstart.md  releases.md  testing.md  threat-model.md  unsafe.md
docs/guides/: attestation.md  audit.md  cli.md  fido2.md  fips.md  fleet.md  led.md  oath.md  openpgp.md  otp.md  piv.md  seed-backup.md  soft-lock.md  ssh.md  tui.md
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: ccid_handler.rs  core1.rs  flash_storage.rs  led.rs  main.rs  otp_keys.rs  presence.rs  rescue_platform.rs  vendor.rs
fuzz/: Cargo.toml
nix/: devshells.nix  firmware.nix
rsk-wipe/: README.md
scripts/: check.sh  docs.sh
tests/: 14_up_only_after_reboot.py  30_ccid_transport.py  31_openpgp_select.py  32_openpgp_pins.py  33_openpgp_ec_crypto.py  34_openpgp_rsa.py  35_openpgp_x25519.py  36_openpgp_keygen.py  37_openpgp_lifecycle.py  38_openpgp_mse.py  39_openpgp_reset_code.py  40_openpgp_aes_pso.py  41_openpgp_cardholder_cert.py  51_secure_reboot.py  52_openpgp_uif_touch.py  70_management.py  71_oath.py  72_yubico_otp.py  74_otp_slots_3_4.py  76_soft_lock.py  80_piv.py  85_rescue.py  90_otp_mkek_migration.py
tools/: README.md  pyproject.toml
(+80 files in other folders)
